--- a/docs/sciences/biology.mdx
+++ b/docs/sciences/biology.mdx
@@ -3,4 +3,156 @@ sidebar_position: 14
 draft: true
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+import HisyeoTabs from '@site/src/components/HisyeoTabs'
+import HisyeoText from '@site/src/components/HisyeoText'
+import HisyeoWord from '@site/src/components/HisyeoWord'
+import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
+
 # Biology
+
+Biology is the study of <HisyeoWord is='zîwit'/> (life). It examines the intricate threads of the Great Weave as they manifest in the physical world.
+
+### The Kingdoms of Life
+
+Hîsyêô divides life into categories based on their biological structure.
+
+| English  | Hîsyêô                    |
+|----------|---------------------------|
+| Animal   | <HisyeoWord is='zonwul'/> |
+| Plant    | <HisyeoWord is='gos'/>    |
+| Fungus   | <HisyeoWord is='xifon'/>  |
+| Bacteria | <HisyeoWord is='fikwun'/> |
+| Virus    | <HisyeoWord is='wixonû'/> |
+
+### Cellular Biology
+
+The fundamental unit of life is the <HisyeoWord is='kûlûnun'/> (cell).
+
+| English    | Hîsyêô                               | Notes                                     |
+|------------|--------------------------------------|-------------------------------------------|
+| Cell       | <HisyeoWord is='kûlûnun'/>           | Literally "jail/kennel" (enclosed space). |
+| Plant Cell | <HisyeoText>kûlûnun gos</HisyeoText> |                                           |
+| Protein    | <HisyeoWord is='tonbokcut'/>         | The building blocks.                      |
+| Growth     | <HisyeoWord is='nîôk'/>              | Sprouting/Developing.                     |
+
+### Botany
+
+The study of plant life and its structures.
+
+#### Types of Plants
+
+- **Tree:** <HisyeoWord is='nomû'/> (Also means "wood")
+- **Shrub/Bush:** <HisyeoWord is='zolî'/>
+- **Grass:** <HisyeoWord is='hûlû'/>
+- **Algae/Moss:** <HisyeoWord is='fôdoloc'/>
+
+#### Plant Parts
+
+- **Flower:** <HisyeoWord is='înbolî'/>
+- **Leaf/Petal:** <HisyeoWord is='woloko'/>
+- **Seed:** <HisyeoWord is='oûdî'/>
+- **Bulb:** <HisyeoWord is='lônkin'/>
+- **Cone:** <HisyeoWord is='xîxulko'/>
+
+### Zoology
+
+Animals are divided into several major classes.
+
+#### Mammals
+
+An animal of the *Mammalia* class is called a <HisyeoWord is='hôktun'/>.
+
+- **Human:** <HisyeoWord is='umo'/>
+- **Primate:** <HisyeoWord is='fonolon'/> (Monkey/Ape)
+- **Canine:** <HisyeoWord is='zowo'/> (Dog/Bear/Wolf)
+- **Feline:** <HisyeoWord is='mocko'/> (Cat/Lion/Tiger)
+- **Bovine:** <HisyeoWord is='hôfezî'/> (Cow/Ox)
+- **Equine:** <HisyeoWord is='kûdu'/> (Horse/Zebra)
+- **Swine:** <HisyeoWord is='dônûs'/> (Pig/Boar)
+- **Caprine:** <HisyeoWord is='yônê'/> (Goat/Sheep)
+- **Cervid:** <HisyeoWord is='lûîcû'/> (Deer/Giraffe)
+- **Rodent:** <HisyeoWord is='cûî'/> (Mouse/Rabbit)
+
+#### Birds, Reptiles & Amphibians
+
+- **Bird:** <HisyeoWord is='tîmîok'/>
+- **Reptile/Lizard:** <HisyeoWord is='bûlûsî'/>
+- **Amphibian:** <HisyeoWord is='onfîbî'/>
+
+#### Aquatic Life
+
+- **Fish:** <HisyeoWord is='mîcîn'/>
+- **Shark/Ray:** <HisyeoWord is='mongô'/>
+- **Cephalopod:** <HisyeoWord is='kôtfûsu'/> (Octopus/Squid)
+- **Jellyfish/Anemone:** <HisyeoWord is='xohofec'/>
+- **Sponge:** <HisyeoWord is='îsbônxu'/>
+
+#### Invertebrates & Insects
+
+- **Arthropod:** <HisyeoWord is='sundîbot'/> (General term)
+- **Insect/Bug:** <HisyeoWord is='mûxî'/> (Ants/Wasps/Beetles/Flies)
+- **Arachnid:** <HisyeoWord is='buyencok'/> (Spider/Scorpion)
+- **Crustacean:** <HisyeoWord is='kistosê'/> (Crab/Lobster)
+- **Mollusk:** <HisyeoWord is='mîencok'/>
+- **Gastropod:** <HisyeoWord is='minyoto'/> (Slug/Snail)
+- **Worm:** <HisyeoWord is='minyô'/>
+
+### Ecology
+
+Understanding how organisms interact with their environment (<HisyeoWord is='bîômu'/>).
+
+| English      | Hîsyêô                    | Definition                             |
+|--------------|---------------------------|----------------------------------------|
+| Biome        | <HisyeoWord is='bîômu'/>  | The environment/habitat.               |
+| Predation    | <HisyeoWord is='wêtodû'/> | To hunt/chase (Verb) or "Prey" (Noun). |
+| Venom/Poison | <HisyeoWord is='nozî'/>   | A toxic substance.                     |
+
+#### Biomes of the World
+
+The world is divided into distinct regions of life, defined by their climate and vegetation.
+
+| English             | Hîsyêô                                   | Literal Meaning |
+|---------------------|------------------------------------------|-----------------|
+| Forest              | <HisyeoText>bîômu nomû</HisyeoText>       | Tree biome       |
+| Rainforest          | <HisyeoText>bîômu nomû hûzon</HisyeoText> | Rain tree biome  |
+| Grassland / Savanna | <HisyeoText>bîômu hûlû</HisyeoText>       | Grass biome      |
+| Desert              | <HisyeoText>bîômu ûlgûkîn</HisyeoText>    | Dry biome        |
+| Tundra              | <HisyeoText>bîômu cunyû</HisyeoText>      | Cold biome       |
+| Wetland / Swamp     | <HisyeoText>bîômu nubuso</HisyeoText>     | Wet biome        |
+| Mountain            | <HisyeoText>bîômu bûmî cên</HisyeoText>  | High land biome |
+| Ocean / Marine      | <HisyeoText>bîômu xômûtlô</HisyeoText>   | Ocean biome     |
+| Coral Reef          | <HisyeoText>comen xômûtlô</HisyeoText>   | Ocean garden    |
+
+### Anatomy
+
+The body (<HisyeoWord is='solîlo'/>) is the vessel of the soul (<HisyeoWord is='lûok'/>).
+
+| Part  | Hîsyêô                           |
+|-------|----------------------------------|
+| Head  | <HisyeoWord is='deku'/>          |
+| Organ | <HisyeoWord is='kukwon'/>        |
+| Brain | <HisyeoText>dûuncît</HisyeoText> |
+| Heart | <HisyeoText>lozîdô</HisyeoText>  |
+| Blood | <HisyeoText>luhû</HisyeoText>    |
+| Bone  | <HisyeoText>ôstî</HisyeoText>    |
+| Skin  | <HisyeoText>ocûo</HisyeoText>    |
+
+### Genetics
+
+Genetics is the study of inheritable traits and the code of life.
+
+| English     | Hîsyêô                                                            | Literal Meaning                          |
+|-------------|-------------------------------------------------------------------|------------------------------------------|
+| Gene        | <HisyeoText>doî yê zomo kînyosel yê mûtyu kûlûnun</HisyeoText>    | Thread of chemical group ye cell center  |
+| DNA         | <HisyeoText>zûnlo yê fecko mixofo yê mûtyu kûlûnun </HisyeoText>  | Sequence of acidic liquid of cell center |
+| Trait       | <HisyeoWord is='dî'/>                                             | to become (Verb) / trait (Noun)          |
+| Mutation    | <HisyeoText>zûnlo yê mûtyu kûlûnun yê yoûtî dî nêôs </HisyeoText> | A nuclear sequence of some new traits    |
+| Inheritance | <HisyeoWord is='îcwon'/>                                          | Inheritance / Legacy                     |
+
+<HisyeoTabs>
+    <p>zûnlo yê fecko mixofo yê mûtyu kûlûnun mût solîlo kôto fos ni kôson&emsp;<em>The DNA tells the body what to building</em></p>
+</HisyeoTabs>
+
+<HisyeoTooltip />
