--- a/docs/sciences/biology.mdx
+++ b/docs/sciences/biology.mdx
@@ -32,7 +32,7 @@ The fundamental unit of life is the <HisyeoWord is='kûlûnun'/> (cell).
 | English    | Hîsyêô                               | Notes                                     |
 |------------|--------------------------------------|-------------------------------------------|
 | Cell       | <HisyeoWord is='kûlûnun'/>           | Literally "jail/kennel" (enclosed space). |
-| Plant Cell | <HisyeoText>kûlûnun gos</HisyeoText> |                                           |
+| Plant Cell | <HisyeoWord is='kûlûnun'/> <HisyeoWord is='gos'/> |                                           |
 | Protein    | <HisyeoWord is='tonbokcut'/>         | The building blocks.                      |
 | Growth     | <HisyeoWord is='nîôk'/>              | Sprouting/Developing.                     |
 
@@ -144,14 +144,14 @@ Genetics is the study of inheritable traits and the code of life.
 
 | English     | Hîsyêô                                                            | Literal Meaning                          |
 |-------------|-------------------------------------------------------------------|------------------------------------------|
-| Gene        | <HisyeoText>doî yê zomo kînyosel yê mûtyu kûlûnun</HisyeoText>    | Thread of chemical group ye cell center  |
-| DNA         | <HisyeoText>zûnlo yê fecko mixofo yê mûtyu kûlûnun </HisyeoText>  | Sequence of acidic liquid of cell center |
+| Gene        | <HisyeoText>doî yê zomo kînyosel yê mutyu kûlûnun</HisyeoText>    | Thread of chemical group ye cell center  |
+| DNA         | <HisyeoText>zûnlo yê fecko mixofo yê mutyu kûlûnun </HisyeoText>  | Sequence of acidic liquid of cell center |
 | Trait       | <HisyeoWord is='dî'/>                                             | to become (Verb) / trait (Noun)          |
-| Mutation    | <HisyeoText>zûnlo yê mûtyu kûlûnun yê yoûtî dî nêôs </HisyeoText> | A nuclear sequence of some new traits    |
+| Mutation    | <HisyeoText>zûnlo yê mutyu kûlûnun yê yoûtî dî nêôs </HisyeoText> | A nuclear sequence of some new traits    |
 | Inheritance | <HisyeoWord is='îcwon'/>                                          | Inheritance / Legacy                     |
 
 <HisyeoTabs>
-    <p>zûnlo yê fecko mixofo yê mûtyu kûlûnun mût solîlo kôto fos ni kôson&emsp;<em>The DNA tells the body what to building</em></p>
+    <p>zûnlo yê fecko mixofo yê mutyu kûlûnun mût solîlo kôto fos ni kôson&emsp;<em>The DNA tells the body what to building</em></p>
 </HisyeoTabs>
 
 <HisyeoTooltip />
