--- a/docs/sciences/biology.mdx
+++ b/docs/sciences/biology.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 14
-description: An overview of biological terminology in Hîsyêô, covering kingdoms of life, botany, zoology, anatomy, and ecology.
+description: "An overview of biological terminology in Hîsyêô, covering kingdoms of life, botany, zoology, anatomy, and ecology."
 ---
 
 import Tabs from '@theme/Tabs';
